@@ -33,6 +33,7 @@ import org.apache.lucene.index.TermsEnum;
 import org.apache.lucene.search.similarities.Similarity;
 import org.apache.lucene.search.similarities.Similarity.SimScorer;
 import org.apache.lucene.util.Bits;
+import org.apache.lucene.util.BytesRef;
 import org.apache.lucene.util.ToStringUtils;
 
 /**
@@ -40,9 +41,33 @@ import org.apache.lucene.util.ToStringUtils;
  * other terms with a {@link BooleanQuery}.
  */
 public class TermQuery extends Query {
+
+  private static final Similarity.SimScorer NON_SCORING_SIM_SCORER = new Similarity.SimScorer() {
+
+    @Override
+    public float score(int doc, float freq) {
+      return 0f;
+    }
+
+    @Override
+    public float computeSlopFactor(int distance) {
+      return 1f;
+    }
+
+    @Override
+    public float computePayloadFactor(int doc, int start, int end, BytesRef payload) {
+      return 1f;
+    }
+
+    @Override
+    public Explanation explain(int doc, Explanation freq) {
+      return Explanation.match(0f, "Match on doc=" + doc);
+    }
+  };
+
   private final Term term;
   private final TermContext perReaderTermState;
-  
+
   final class TermWeight extends Weight {
     private final Similarity similarity;
     private final Similarity.SimWeight stats;
@@ -58,7 +83,7 @@ public class TermQuery extends Query {
       assert termStates.hasOnlyRealTerms();
       this.termStates = termStates;
       this.similarity = searcher.getSimilarity();
-      
+
       final CollectionStatistics collectionStats;
       final TermStatistics termStats;
       if (needsScores) {
@@ -72,6 +97,7 @@ public class TermQuery extends Query {
         collectionStats = new CollectionStatistics(term.field(), maxDoc, -1, -1, -1);
         termStats = new TermStatistics(term.bytes(), docFreq, totalTermFreq);
       }
+     
       this.stats = similarity.computeWeight(getBoost(), collectionStats, termStats);
     }
 
@@ -84,17 +110,17 @@ public class TermQuery extends Query {
     public String toString() {
       return "weight(" + TermQuery.this + ")";
     }
-    
+
     @Override
     public float getValueForNormalization() {
       return stats.getValueForNormalization();
     }
-    
+
     @Override
     public void normalize(float queryNorm, float topLevelBoost) {
       stats.normalize(queryNorm, topLevelBoost);
     }
-    
+
     @Override
     public Scorer scorer(LeafReaderContext context, Bits acceptDocs) throws IOException {
       assert termStates.topReaderContext == ReaderUtil.getTopLevelContext(context) : "The top-reader used to create Weight (" + termStates.topReaderContext + ") is not the same as the current reader's top-reader (" + ReaderUtil.getTopLevelContext(context);
@@ -104,9 +130,16 @@ public class TermQuery extends Query {
       }
       PostingsEnum docs = termsEnum.postings(acceptDocs, null, needsScores ? PostingsEnum.FREQS : PostingsEnum.NONE);
       assert docs != null;
-      return new TermScorer(this, docs, similarity.simScorer(stats, context));
+      final Similarity.SimScorer simScorer;
+      if (needsScores) {
+        simScorer = similarity.simScorer(stats, context);
+      } else {
+        // avoids loading other scoring factors such as norms
+        simScorer = NON_SCORING_SIM_SCORER;
+      }
+      return new TermScorer(this, docs, simScorer);
     }
-    
+
     /**
      * Returns a {@link TermsEnum} positioned at this weights Term or null if
      * the term does not exist in the given context
@@ -124,14 +157,14 @@ public class TermQuery extends Query {
       termsEnum.seekExact(term.bytes(), state);
       return termsEnum;
     }
-    
+
     private boolean termNotInReader(LeafReader reader, Term term) throws IOException {
       // only called from assert
       // System.out.println("TQ.termNotInReader reader=" + reader + " term=" +
       // field + ":" + bytes.utf8ToString());
       return reader.docFreq(term) == 0;
     }
-    
+
     @Override
     public Explanation explain(LeafReaderContext context, int doc) throws IOException {
       Scorer scorer = scorer(context, context.reader().getLiveDocs());
@@ -152,13 +185,13 @@ public class TermQuery extends Query {
       return Explanation.noMatch("no matching term");
     }
   }
-  
+
   /** Constructs a query for the term <code>t</code>. */
   public TermQuery(Term t) {
     term = Objects.requireNonNull(t);
     perReaderTermState = null;
   }
-  
+
   /**
    * Expert: constructs a TermQuery that will use the provided docFreq instead
    * of looking up the docFreq against the searcher.
@@ -174,12 +207,12 @@ public class TermQuery extends Query {
     }
     perReaderTermState = Objects.requireNonNull(states);
   }
-  
+
   /** Returns the term of this query. */
   public Term getTerm() {
     return term;
   }
-  
+
   @Override
   public Weight createWeight(IndexSearcher searcher, boolean needsScores) throws IOException {
     final IndexReaderContext context = searcher.getTopReaderContext();
@@ -193,10 +226,10 @@ public class TermQuery extends Query {
       // PRTS was pre-build for this IS
       termState = this.perReaderTermState;
     }
-    
+
     return new TermWeight(searcher, needsScores, termState);
   }
-  
+
   /** Prints a user-readable version of this query. */
   @Override
   public String toString(String field) {
@@ -209,7 +242,7 @@ public class TermQuery extends Query {
     buffer.append(ToStringUtils.boost(getBoost()));
     return buffer.toString();
   }
-  
+
   /** Returns true iff <code>o</code> is equal to this. */
   @Override
   public boolean equals(Object o) {
